[metadata]
name = pycaputo
version = 2023.3
description = Evaluate fractional integrals and solve fractional ODEs
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexfikl/pycaputo
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    fractional-derivatives
    fractional-integrals
    quadrature
    time-stepping

[options]
packages = find:
install_requires =
    numpy>=1.17
    rich
    scipy>=1.7.0
    typing-extensions
python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
dev =
    differint
    matplotlib
    mypy
    pip-tools
    pytest
    ruff
    types-dataclasses
vis =
    SciencePlots

[mypy]
warn_unused_ignores = True
plugins = numpy.typing.mypy_plugin

[mypy-differint.*]
ignore_missing_imports = True

[mypy-SciencePlots.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True
